[package]
name = "buttbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19"
# clap = { version = "3", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colcon = { git="https://github.com/beinsezii/colcon.git" }

[profile.release]
lto = true
strip = true
