[package]
name = "buttbox"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colcon = "0.9"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.27", features = ["wgpu"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
